Draft finished just in time for some proof-reading before printing ;)

--- a/thesis/literature.bib
+++ b/thesis/literature.bib
@@ -482,3 +482,11 @@ Best thesis ever:
 	urldate = {2021-07-31},
 	year = {2018},
 }
+@article{ren2015faster,
+	title={Faster r-cnn: Towards real-time object detection with region proposal networks},
+	author={Ren, Shaoqing and He, Kaiming and Girshick, Ross and Sun, Jian},
+	journal={Advances in neural information processing systems},
+	volume={28},
+	pages={91--99},
+	year={2015}
+}
