Change document format to onesided

--- a/thesis/mobile-object-detection.tex
+++ b/thesis/mobile-object-detection.tex
@@ -10,7 +10,7 @@
                BCOR=12mm,
                DIV=13,
                openany,   % using this removes blank pages around part / chapter starts.
-%               oneside    % include this if you have to print only one page per sheet of paper.
+               oneside    % include this if you have to print only one page per sheet of paper.
                ]
                {scrbook}
 
