added the functionality to download the models on the fly and disable the button if the model is already downloaded

--- a/TUM_Lens/app/src/main/res/values/strings.xml
+++ b/TUM_Lens/app/src/main/res/values/strings.xml
@@ -15,6 +15,7 @@
     <string name="specs">Specifications</string>
     <string name="version">Version 0.1</string>
     <string name="other_settings">Other settings</string>
+    <string name="download">Download</string>
     <string name="model">Model</string>
     <string name="initializing">initializing…</string>
     <string name="tap_to_pick_from_camera_roll">tap to pick from camera roll</string>
