ADDED sign language to toggle to start Sign Language Translation activity also added dependencies & assets

--- a/TUM_Lens/app/src/main/res/values/strings.xml
+++ b/TUM_Lens/app/src/main/res/values/strings.xml
@@ -28,4 +28,5 @@
     <string name="image_classification">Classifier</string>
     <string name="object_detection">Detector</string>
     <string name="tfe_od_camera_error" translation_description="Error regarding camera support[CHAR_LIMIT=40]">This device doesn\'t support Camera2 API.</string>
+    <string name="sign_language">Sign Language</string>
 </resources>
